--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ body{
 .cta-btn{
     float: right;
     margin-top: 17px;
-    margin-left: 12px;
+    /* margin-left: 12px; */
     background-color: rgb(144, 0, 247);
     padding: 5px 25px;
     border: 1px solid white;
@@ -119,33 +119,56 @@ body{
     height: 350px;
     width: 430px;
 }
-.section{
+
+.section1{
     width: 100%;
-    height: 250.92px;
-    background-color: #eceaea;
+    height: auto;
+    background-color: #caebf1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+}
+.section1-content{
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
-.section-content h1{
-    margin-top: 70px;
+.section1-content h1{
     font-size: 40px;
-    text-align: center;
-    color: #3b3a3a;
+    color: #464646;
+
 }
-.section-content p{
-    font-size: 16px;
-    color: #787777;
-    margin-top: -9px;
+.section1-content p{
+    font-size: 18px;
+    color: #9d9c9c;;
+}
+.section1-image{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+.section1-image-group1 img{
+    width: 35px;
+    height: 35px;
+    margin: 40px;
+}
+.section1-image-group2 img{
+    width: 35px;
+    height: 35px;
+    margin: 40px;
+
+}
+.section-image-group3 img{
+    width: 35px;
+    height: 35px;
+    margin: 40px;
+
 }
 
-.section-image img{
-    width: 35px;
-    height: 50px;
-    margin-top: 25px;
-    margin: 70px;
-}
+
+
 .section2{
     width: 100vw;
     height: 100vh;
