--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -1,6 +1,6 @@
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 576px) {
     .navbar{
-        width: 100%;
+        width: 100%; 
         height: auto;
         padding: 5px;
         
@@ -20,8 +20,7 @@
         margin: 10px;
     }
     .cta-btn{
-        margin-right: 380px;
-        margin-top: -25px;
+        margin-top: 10px;
         width: 70px;
         height: 30px;
         font-size: 12px;
@@ -38,7 +37,7 @@
    }
    .banner-image img{
     margin-top: 190px;
-    margin-left: -720px;
+    margin-left: -680px;
     width: 300px;
     height: 250px;  
    }
@@ -49,7 +48,7 @@
    }
    .banner-content h2{
     font-size: 23px;
-    margin-left: -155px;
+    margin-left: -240px;
     line-height: 50px;
    }
    .banner-content{
@@ -70,28 +69,15 @@
    .banner-btn a{
     font-size: 12px;
    }
-   .section{
+   .section1-image{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;}
+
+   .section2{
     width: 100%;
-    padding-top: 500px;
     height: auto;
-    background-color: #d7e0f7;
-   }
-   .section-content h1{
-    margin-top: -600px;
-    font-size: 24px;
-   }
-   .section-content p{
-    font-size: 14px;
-    line-height: 40px;
-   }
-   .section-image{
-    margin-top: -400px;
-   }
-   .section-image img{
-    width: 15px;
-    height: 25px;
-    margin: 20px;
-    margin-top: 20px; 
    }
    .section2-content h1{
     font-size: 23px;
@@ -101,53 +87,67 @@
     font-size: 14px;
    }
 .cards{
+    height: auto;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+.card1,.card2,.card3{
+    width: 200px;
+    height: 150px;
+    margin: 15px;
     display: flex;
     flex-direction:column;
     justify-content: center;
-    align-items: center;
-    margin-top: 350px;
 }
-.card1{
-    width: 210px;
-    height: 210px;
-    margin: 20px;
-    padding: 35px 50px;
-    flex-direction: column-reverse;
-    background-color: #e9e8e8;
+.card1 img{
+   width: 20px;
+   height: 20px;
+   margin-left: 55px;
 }
-.card2,.card3{
-    width: 210px;
-    height: 210px;
-    margin: 20px;
-    flex-direction: column-reverse;
-    background-color: #e9e8e8;
-
-   }
-
-.cards img{
-    width: 25px;
-    height: 25px;
-    margin-left: 40px;
-
+.card2 img{
+   width: 20px;
+   height: 20px;
+   margin-top: 10px;
+   margin-left: 40px;
 }
- .card1 h1,.card2 h1{
-    font-size: 14px;
-    line-height: 12px;
-    margin-top: 4px;
- }
+.card3 img{
+   width: 20px;
+   height: 20px;
+   margin-top: -5px;
+   margin-left: 40px;
+}
+
+.card1 h1{
+    font-size: 13px;
+    line-height: 15px;
+}
+.card2 h1{
+    font-size: 13px;
+    line-height: 15px;
+}
 .card3 h1{
     font-size: 12px;
-    line-height: 12px;
-    margin-top: 4px;
+    line-height: 15px;
+    margin-top: 5px;
 }
- .card1 p, .card2 p,.card3 p{
+
+.card1 p{
+    font-size: 10px;
+    margin-top: 5px;
+}
+.card2 p{
     font-size: 9px;
-    margin-top: 8px;
-    line-height: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
- }
+    margin-top: 5px;
+
+}
+.card3 p{
+    font-size: 9px;
+    margin-top: 5px;
+}
+
 .section3{
     width: 100%;
     height: auto;
@@ -271,10 +271,10 @@
 .contact-image img{
     width: 250px;
     height: 250px;
-    margin-left: 10px;
+    margin-left: 40px;
 }
 .card{
-    margin-left: -280px;
+    margin-left: -230px;
     margin-bottom: 50px;
 }
 .footer-content1,.footer-content2,.footer-content3,.footer-content4{
