Fiew changes in small icon section

--- a/index.css
+++ b/index.css
@@ -139,7 +139,7 @@ body{
 }
 .section1-content p{
     font-size: 18px;
-    color: #9d9c9c;;
+    color: #9d9c9c;
 }
 .section1-image{
     display: flex;
